--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "cojunto = 5\n",
+    "print(cojunto)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "constante = 8.5\n",
+    "print(constante)"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(cojunto)"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "miNombre = 'Gabriel Iriarte'"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "complejo = 5 + 10j"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(complejo)"
+   ]
   },
   {
    "attachments": {},
@@ -111,7 +163,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Pi = 3.1416"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "var = 'True'\n",
+    "var2 = True"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +195,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(var))\n",
+    "print(type(var2))"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 6\n",
+    "num2 = 3.5\n",
+    "resul = num1 + num2\n",
+    "print(resul)"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +250,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12+15j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4 + 10j\n",
+    "b = 8 + 5j\n",
+    "resultCom = a + b\n",
+    "print(resultCom)"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100+40j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 80\n",
+    "d = 20 + 40j\n",
+    "resulCom2 = c + d\n",
+    "print(resulCom2)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "80 * 2"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +334,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "x**=8\n",
+    "print(x)"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 27/4\n",
+    "print(x)"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(27 // 4)"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +413,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 27%4"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6 * 4 + 3"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +469,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola mi nombre es gabriel iriarte\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = 'hola mi nombre es '\n",
+    "str2 = 'gabriel iriarte'\n",
+    "print(str1+str2)"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'2' == 2"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +524,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 == int('2')"
+   ]
   },
   {
    "attachments": {},
@@ -333,10 +552,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float('3.8')\n",
+    "print(a)"
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +578,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "a -= 1\n",
+    "print(a)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +605,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 << 3"
+   ]
   },
   {
    "attachments": {},
@@ -378,10 +633,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 + '2'"
+   ]
   },
   {
    "attachments": {},
@@ -396,7 +664,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2 + int('2')"
+   ]
   }
  ],
  "metadata": {
@@ -418,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
