--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el numero -5 es menor que cero\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -5\n",
+    "if x<0:\n",
+    "    print('el numero',x,'es menor que cero')\n",
+    "elif x>0:\n",
+    "    print('el numero',x,'es mayor que cero')\n",
+    "else:\n",
+    "     print('el numero',x,'es igual a cero')\n"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Son los mismo typo de datos\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 5\n",
+    "if (type(a) == type(b)):\n",
+    "    print('Son los mismo typo de datos')\n",
+    "else:\n",
+    "      print('No son los mismo typo de datos')"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +79,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el numero 1 es inpar \n",
+      "el numero 2 es par \n",
+      "el numero 3 es inpar \n",
+      "el numero 4 es par \n",
+      "el numero 5 es inpar \n",
+      "el numero 6 es par \n",
+      "el numero 7 es inpar \n",
+      "el numero 8 es par \n",
+      "el numero 9 es inpar \n",
+      "el numero 10 es par \n",
+      "el numero 11 es inpar \n",
+      "el numero 12 es par \n",
+      "el numero 13 es inpar \n",
+      "el numero 14 es par \n",
+      "el numero 15 es inpar \n",
+      "el numero 16 es par \n",
+      "el numero 17 es inpar \n",
+      "el numero 18 es par \n",
+      "el numero 19 es inpar \n",
+      "el numero 20 es par \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21):\n",
+    "    if i % 2 == 0:\n",
+    "        print(f'el numero {i} es par ')\n",
+    "    else:\n",
+    "        print(f'el numero {i} es inpar ')"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +127,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el nuemero 0 elevado a el exponente 3 es igual a 0\n",
+      "el nuemero 1 elevado a el exponente 3 es igual a 1\n",
+      "el nuemero 2 elevado a el exponente 3 es igual a 8\n",
+      "el nuemero 3 elevado a el exponente 3 es igual a 27\n",
+      "el nuemero 4 elevado a el exponente 3 es igual a 64\n",
+      "el nuemero 5 elevado a el exponente 3 es igual a 125\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(0,6):\n",
+    "    exponete = i**3\n",
+    "    print(f'el nuemero {i} elevado a el exponente 3 es igual a {exponete}')"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "for i in range(1,a+1):\n",
+    "    pass\n",
+    "print(i)\n"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +188,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elfactorial es 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 4\n",
+    "if(type(num) == int):\n",
+    "    if(num > 0):\n",
+    "        fac = num\n",
+    "        while (num > 2):\n",
+    "            num -= 1\n",
+    "            fac = num * fac \n",
+    "        print(f'Elfactorial es {fac}')\n",
+    "    else:\n",
+    "        print('El numero no es mayor que cero')\n",
+    "\n",
+    "else:\n",
+    "    print('El numero no es un entero')"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +240,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estos son los numero del ciclo for: 1\n",
+      "Estos son los numero del ciclo for: 2\n",
+      "Estos son los numero del ciclo for: 3\n",
+      "Estos son los numero del ciclo for: 4\n",
+      "Estos son los numero del ciclo for: 5\n",
+      "Estos son los numero del ciclo for: 6\n",
+      "Estos son los numero del ciclo for: 7\n",
+      "La suma total de los numeros en el rango es: 84\n"
+     ]
+    }
+   ],
+   "source": [
+    "sumaNumeros = 0\n",
+    "for i in range(1,8):\n",
+    "    print(f'Estos son los numero del ciclo for: {i}')\n",
+    "    j = 1\n",
+    "    while j <= i:\n",
+    "        sumaNumeros += j\n",
+    "        j += 1\n",
+    "print('La suma total de los numeros en el rango es:',sumaNumeros)        "
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +279,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número del ciclo for: 1\n",
+      "Número del ciclo for: 2\n",
+      "Número del ciclo for: 3\n",
+      "Número del ciclo for: 4\n",
+      "Número del ciclo for: 5\n",
+      "La suma total es: 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -238,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
