--- a/M07_funciones/Prep_Course_Homework_07.ipynb
+++ b/M07_funciones/Prep_Course_Homework_07.ipynb
@@ -21,7 +21,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def primo (num):\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
